workspace( name = "mina" )
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository", "new_git_repository")

################################################################
#### OCAML ####
git_repository(
    name = "obazl_rules_ocaml",
    remote = "https://github.com/obazl/rules_ocaml",
    branch = "dev",
    # commit = "feef897197b36b14b65ffdf00b9badcbdb8f42f4",
    # shallow_since = "1593623637 -0500"
)
## Repository Bootstrapping: Fetch, Load, and Run

load("@obazl_rules_ocaml//ocaml:bootstrap.bzl",
     "ocaml_configure",
     "opam_configure",
     "ocaml_register_toolchains")
## For each language, we need to fetch the rules repos,
## load function symbols, and then execute the functions.
## Then we need to do the same for our repo deps,
## and where our direct repo deps have their own repo deps,
## we need load and run the functions that bootstrap them.

opam_configure()
## We encapsulate the rule fetches (repository rules) in extension
## functions called "<lang>_fetch_rules"; these are found in
## "bzl/repos/<lang>_repos.bzl".

ocaml_configure()
## For library repos we encapsulate fetches in functions called
## "*_fetch_repo" (or "_repos"). For direct depdendents these are
## located in the same file as the "*_fetch_rules" functions; for an
## example see "bzl/repos/ocaml_repos.bzl". For indirect dependents -
## repositories that the direct dependents import - they are located
## in extension files within the repo, usually "//:BUILD.bzl". See
## libp2p below for an example.

## However we cannot encapsulate "load(...)" statements, like this,
## since they must be at the top level. So our procedure is to call
## the functions that fetch all the rules/repos at one go, and then
## issue "load" statements to get access to the functions, and then
## run the loaded functions.

ocaml_register_toolchains(installation="host")
## IMPORTANT: order matters.

################ C/C++ Rules ################

################################################################
local_repository( name = "async_kernel" , path = "src/external/async_kernel")
local_repository( name = "graphql_ppx"  , path = "src/external/graphql_ppx")
local_repository( name = "ocaml_extlib" , path = "src/external/ocaml_extlib")
local_repository( name = "ppx_optcomp"  , path = "src/external/ppx_optcomp")
local_repository( name = "ppx_version"  , path = "src/external/ppx_version")
local_repository( name = "rpc_parallel" , path = "src/external/rpc_parallel")
################################################
################ Golang Support ################
## libp2p_helper is a repository, but is embedded, not remote, so we
## use "local_repository", which must be executed as a top-level
## instruction in the workspace file.
local_repository(name = "libp2p_helper", path = "src/app/libp2p_helper")

## since libp2p_helper is our only golang repo, it includes the
## language fetch rules as well as its indirect lib fetch rules.
# gazelle:proto disable_global
load("@libp2p_helper//:BUILD.bzl", "libp2p_fetch_go_rules", "libp2p_fetch_go_libs")
libp2p_fetch_go_rules()

load("@io_bazel_rules_go//go:deps.bzl",
     "go_download_sdk",
     "go_register_toolchains",
     "go_rules_dependencies",
     )

go_download_sdk(
    name = "go_sdk",
    version = "1.13",
)
go_rules_dependencies()
go_register_toolchains()

load("@com_google_protobuf//:protobuf_deps.bzl", "protobuf_deps")
protobuf_deps()

load("@bazel_gazelle//:deps.bzl", "gazelle_dependencies", "go_repository")

libp2p_fetch_go_libs(go_repository)

gazelle_dependencies(go_repository_default_config = "@libp2p_helper//:WORKSPACE.bazel")

################################################

gazelle_dependencies(go_repository_default_config = "@libp2p_helper//:WORKSPACE.bazel")
