load("//bzl:rules.bzl", "mina_config")

mina_config(
    name = "config",
    out  = "config.mlh",
    profile = select({
        "//:profile_debug"                      : "//src/config/profile/debug",
        "//:profile_dev"                        : "//src/config/profile/dev",
        "//:profile_testnet_public"             : "//src/config/profile/testnet_public",
        "//:profile_test_postake_medium_curves" : "//src/config/profile/test_postake_medium_curves",
        # "//:profile_release"                  : "//src:release",
    }, no_match_error = "Unknown profile"),
    visibility = ["//visibility:public"],
)
