[workspace]

[package]
name = "marlin_plonk_stubs"
version = "0.1.0"
authors = ["opensource@o1labs.org"]
description = "OCaml stubs for marlin and plonk proof systems"
repository = "https://github.com/MinaProtocol/mina"
license = "MIT/Apache-2.0"
edition = "2018"

[package.metadata.raze]
genmode = "Remote"
workspace_path = "//bzl/raze"
targets = ["x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
output_buildfile_suffix = "BUILD.bazel"
default_gen_buildrs = true

[dependencies]
libc = { version = "0.2.0" }
num-bigint = { version = "= 0.2.3" }
ocaml = { version = "0.19.0" } # , features = ["docs-rs"] }
rand = { version = "=0.8.3" }  # "= 0.7"
rand_core = "^0.6.0" # "0.5"
rayon = { version = "1.3.1" }
sprs = { version = "0.7.1" }

[lib]
path = "fake_lib.rs"  # Mandatory (or Cargo tooling is unhappy)
