load("@obazl_rules_ocaml//ocaml:rules.bzl",
     "ocaml_library",
     "ppx_library")

load("//bzl:rules.bzl",
     "mina_config")

######## BUILD SETTINGS (uncategorized) ########
load("@bazel_skylib//rules:common_settings.bzl",
     "bool_flag", "bool_setting",
     "int_flag", "int_setting",
     "string_flag", "string_setting")

# default values taken from config/dev.mlh

################ PROFILE SELECTION ################
# to support selection by profile we need a config setting for each
# profile:
config_setting( name = "config_dev",
                flag_values = { "//:profile": "dev" })
config_setting( name = "config_debug",
                flag_values = { "//:profile": "debug" })
config_setting( name = "config_fake_hash",
                flag_values = { "//:profile": "fake_hash" })
config_setting( name = "config_testnet_public",
                flag_values = { "//:profile": "testnet_public" })

# config_setting( name = "config_custom",
#                 flag_values = { "//dev/profile": "any" })
